openshift/user-custom-metrics/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus-example-app
  name: prometheus-example-app
  namespace: user-metrics
spec:
  to:
    kind: Service
    name: prometheus-example-app
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
